Fix unequal spacing of imgs on main page

--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,10 @@ h2{
     justify-content: space-evenly;
 }
 
+.list-a li {
+    width: 260px;
+}
+
 .list-a .food-image {
     height: 150px;
     width: 150px;
@@ -78,6 +82,7 @@ h2{
 }
 
 li a {
+    line-height: 2;
     text-decoration: none;
     color: #48d;
 }
